--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,16 @@ h1,h2,h3,h4,h5,h6{
     font-size: 40px;
     text-align: left;
 }
+ul{
+    list-style-type: square;
+}
+ol{
+    list-style-type: upper-roman;
+}
+li{
+    color: white;
+}
+.fave{
+    color: orangered;
+    
+}
