--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,10 @@ a{
     border:1px solid white;
     background-color: darkslateblue;
 }
+.caption{
+    font-size: 15px;
+    font-style: italic;
+}
+.container{
+    display: flex;
+}
